Fix spacing if the 'menu' text spans multiple lines, line-height was wasting too much space

--- a/style.css
+++ b/style.css
@@ -147,10 +147,10 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
   }
 
   #header {
-    min-height: 30px;
     height: auto;
     font: 14px Arial;
-    line-height: 30px;
+    padding: 7px 0;
+    line-height: normal;
     flex: 0 1 auto;
   }
 
@@ -163,12 +163,10 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
   }
 
   #menu {
-    min-height: 40px;
     height: auto;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 7px 5%;
     font-size: 14px;
-    line-height: 40px;
+    line-height: normal;
     flex: 0 1 auto;
   }
 
@@ -191,7 +189,7 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
   #chatframe {
     border-radius: 0;
     width: 100%;
-    height: 95%;
+    height: 90%;
     flex: 1 0 auto;
   }
 
